# LyraArcsim

./: .gitignore  CMakeLists.txt  README  README.md
batching/: batching.py
batching/batching_conf/uniform_grid_drop/: uniform_grid_drop_00000000.json  uniform_grid_drop_00000001.json  uniform_grid_drop_00000002.json  uniform_grid_drop_00000003.json  uniform_grid_drop_00000004.json  uniform_grid_drop_00000005.json  uniform_grid_drop_00000006.json  uniform_grid_drop_00000007.json  uniform_grid_drop_00000008.json  uniform_grid_drop_00000009.json  uniform_grid_drop_00000010.json  uniform_grid_drop_00000011.json  uniform_grid_drop_00000012.json  uniform_grid_drop_00000013.json  uniform_grid_drop_00000014.json  uniform_grid_drop_00000015.json  uniform_grid_drop_00000016.json  uniform_grid_drop_00000017.json  uniform_grid_drop_00000018.json  uniform_grid_drop_00000019.json  uniform_grid_drop_00000020.json  uniform_grid_drop_00000021.json  uniform_grid_drop_00000022.json  uniform_grid_drop_00000023.json  uniform_grid_drop_00000024.json  uniform_grid_drop_00000025.json  uniform_grid_drop_00000026.json  uniform_grid_drop_00000027.json  uniform_grid_drop_00000028.json  uniform_grid_drop_00000029.json  uniform_grid_drop_00000030.json  uniform_grid_drop_00000031.json  uniform_grid_drop_00000032.json  uniform_grid_drop_00000033.json  uniform_grid_drop_00000034.json  uniform_grid_drop_00000035.json  uniform_grid_drop_00000036.json  uniform_grid_drop_00000037.json  uniform_grid_drop_00000038.json  uniform_grid_drop_00000039.json  (+360 more)
conf/: conf.rar  drop_cloth_sphere_motion.json  flag-dense.json  flag.json  fold.json  grid_drop.json  grid_drop_s.json  sphere.json  test.json  tshirt.json  uniform_grid_drop.json
include/: io.hpp  log.hpp  mesh.hpp  physics.hpp  runphysics.hpp  simulation.hpp  sparse.hpp  taucs.hpp  util.hpp
src/: conf.cpp  displayphysics.cpp  displayreplay.cpp  displaytesting.cpp  geometry.cpp  io.cpp  log.cpp  main.cpp  mesh.cpp  misc.cpp  mssccprj.scc  physics.cpp  runphysics.cpp  simulation.cpp  taucs.cpp  util.cpp  vssver2.scc
